--- a/src/main/resources/templates/client-form.html
+++ b/src/main/resources/templates/client-form.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>Client Form</title>
   <style>
-    .error-message{
-        color: red;
+    .error{
+        font-size: 20px;
+        font-weight: bold;
+        font-style: italic;
+        color: #d61010;
     }
   </style>
 </head>
@@ -21,10 +24,10 @@
     Last Name: <input type="text" th:field="*{lastName}"/>
     <span th:if="${#fields.hasErrors('lastName')}"
           th:errors="${client.lastName}"
-          class="error-message">
+          class="error">
     </span><br></br>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Save">
 
   </form>
 </body>
