Add age validations

--- a/src/main/resources/templates/client-confirmation.html
+++ b/src/main/resources/templates/client-confirmation.html
@@ -9,5 +9,10 @@
   <h2>
     Client: <span th:text="${client.firstName + ' ' + client.lastName}"></span>
   </h2>
+  <br>
+  <h2>
+    Client Age: <span
+          th:text="${client.age}"></span>
+  </h2>
 </body>
 </html>
