Add zip-code validations

--- a/src/main/resources/templates/client-confirmation.html
+++ b/src/main/resources/templates/client-confirmation.html
@@ -9,10 +9,13 @@
   <h2>
     Client: <span th:text="${client.firstName + ' ' + client.lastName}"></span>
   </h2>
-  <br>
+
   <h2>
-    Client Age: <span
-          th:text="${client.age}"></span>
+    Client Age: <span th:text="${client.age}"></span>
+  </h2>
+
+  <h2>
+    Zip Code: <span th:text="${client.zipCode}"></span>
   </h2>
 </body>
 </html>
