--- a/src/main/resources/templates/client-form.html
+++ b/src/main/resources/templates/client-form.html
@@ -33,6 +33,11 @@
           class="error">
     </span><br></br>
 
+    Zip code: <input type="text" th:field="*{zipCode}"/>
+    <span th:if="${#fields.hasErrors('zipCode')}"
+          th:errors="${client.zipCode}"
+          class="error">
+    </span><br></br>
     <input type="submit" value="Save">
 
   </form>
