Add car number validation

--- a/src/main/resources/templates/client-confirmation.html
+++ b/src/main/resources/templates/client-confirmation.html
@@ -17,5 +17,9 @@
   <h2>
     Zip Code: <span th:text="${client.zipCode}"></span>
   </h2>
+
+  <h2>
+    Car Number: <span th:text="${client.carNumber}"></span>
+  </h2>
 </body>
 </html>
